--- a/dot_config/chezmoi/chezmoi.toml.tmpl
+++ b/dot_config/chezmoi/chezmoi.toml.tmpl
@@ -1,3 +1,7 @@
+[git]
+    autoCommit = true
+    autoPush = true
 [merge]
     command = "nvim"
     args = ["-d", "{{ "{{" }} .Destination {{ "}}" }}", "{{ "{{" }} .Source {{ "}}" }}", "{{ "{{" }} .Target {{ "}}" }}"]
+
