--- a/dot_config/chezmoi/chezmoi.toml.tmpl
+++ b/dot_config/chezmoi/chezmoi.toml.tmpl
@@ -1,6 +1,6 @@
 [git]
     autoCommit = true
-    autoPush = true
+    autoPush = false
 [merge]
     command = "nvim"
     args = ["-d", "{{ "{{" }} .Destination {{ "}}" }}", "{{ "{{" }} .Source {{ "}}" }}", "{{ "{{" }} .Target {{ "}}" }}"]
